--- a/locales/en.json
+++ b/locales/en.json
@@ -12,7 +12,11 @@
     "nav_home": "Home",
     "nav_about": "About Us",
     "nav_services": "Our Services",
+    "nav_blog": "Blog",
     "nav_contact": "Contact Us",
+    "blog_subtitle": "Discover our latest technological innovations and news.",
+    "blog_empty": "We will be sharing interesting articles with you soon.",
+    "btn_back_to_blog": "Back to Blog",
     "hero_welcome": "Empowering Your Digital Transformation",
     "hero_subtitle": "Custom software development, technology consulting, and innovation to take your business to the next level.",
     "hero_cta_services": "Our Services",
