--- a/locales/es.json
+++ b/locales/es.json
@@ -12,7 +12,11 @@
     "nav_home": "Inicio",
     "nav_about": "¿Quiénes somos?",
     "nav_services": "Nuestros servicios",
+    "nav_blog": "Blog",
     "nav_contact": "Contáctenos",
+    "blog_subtitle": "Descubre nuestras últimas innovaciones y noticias tecnológicas.",
+    "blog_empty": "Próximamente compartiremos artículos interesantes contigo.",
+    "btn_back_to_blog": "Volver al Blog",
     "hero_welcome": "Impulsamos tu Transformación Digital",
     "hero_subtitle": "Desarrollo de software a medida, consultoría tecnológica e innovación para llevar tu negocio al siguiente nivel.",
     "hero_cta_services": "Nuestros Servicios",
